@@ -25,6 +25,12 @@ jag-growing-normal=Normal way to get wood. On average, returns all the seeds bac
 x-greenhouse=Greenhouse
 deadlock-crating=Crating
 
+[mod-setting-name]
+x-deep-landfill=Enable deep landfill [img=info]
+
+[mod-setting-description]
+x-deep-landfill=When enabled, an expensive deep landfill item is added and normal landfill can only be used on shallow water.\n[color=green]Default = On[/color]
+
 
 [map-gen-preset-name]
 x-default=X-Logistics Default
